teams fetched doing uploading files

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -1,15 +1,15 @@
-.logContainer{
-    width: 80%;
+.postContainer{
+    width: 90%;
     margin: 0 auto;
     height: 100vh;
     padding-top: 50px;
 }
-.logContainer h2 {
+.postContainer h2 {
     font-weight: 300;
     text-align: center;
     font-size: 35px;
 }
-.logContainer input{
+.postContainer input{
     font-size: 17px;
     width: 100%;
     margin-top:10px;
@@ -17,7 +17,7 @@
     box-sizing: border-box;
     font-weight: 300;
 }
-.logContainer button {
+.postContainer button {
     background: #03a9f4;
     font-size: 13px;
     padding: 10px;
@@ -29,4 +29,8 @@
     font-weight: 500;
     margin-top: 5px;
     padding: 5px;
+}
+.postContainer select {
+    font-size: 20px;
+    margin-top: 10px;
 }
